3年　単元番号

--- a/app_data.json
+++ b/app_data.json
@@ -75,26 +75,26 @@
   {
     "grade": "3年",
     "units": [
-      {"name": "九九の表とかけ算", "apps": [{"id": "3n-kuku-hyo-kakezan", "title": "九九の表とかけ算", "path": "3nen/3nen_kuku_hyo_kakezan.html"}]},
-      {"name": "わり算", "apps": [{"id": "3n-warizan", "title": "わり算", "path": "3nen/3nen_warizan.html"}]},
-      {"name": "たし算とひき算の筆算", "apps": [{"id": "3n-hissan-th", "title": "たし算とひき算の筆算", "path": "3nen/3nen_hissan_th.html"}]},
-      {"name": "時こくと時間", "apps": [{"id": "3n-jikoku-jikan", "title": "時こくと時間", "path": "3nen/3nen_jikoku_jikan.html"}]},
-      {"name": "一万をこえる数", "apps": [{"id": "3n-ichiman-koeru", "title": "一万をこえる数", "path": "3nen/3nen_ichiman_koeru.html"}]},
-      {"name": "表とグラフ", "apps": [{"id": "3n-hyo-graph", "title": "表とグラフ", "path": "3nen/3nen_hyo_graph.html"}]},
-      {"name": "たし算とひき算", "apps": [{"id": "3n-tashizan-hikizan", "title": "たし算とひき算", "path": "3nen/3nen_tashizan_hikizan.html"}]},
-      {"name": "長さ", "apps": [{"id": "3n-nagasa", "title": "長さ", "path": "3nen/3nen_nagasa.html"}]},
-      {"name": "あまりのあるわり算", "apps": [{"id": "3n-amari-warizan", "title": "あまりのあるわり算", "path": "3nen/3nen_amari_warizan.html"}]},
-      {"name": "重さ", "apps": [{"id": "3n-omosa", "title": "重さ", "path": "3nen/3nen_omosa.html"}]},
-      {"name": "円と球", "apps": [{"id": "3n-en-kyu", "title": "円と球", "path": "3nen/3nen_en_kyu.html"}]},
-      {"name": "何倍でしょう", "apps": [{"id": "3n-nanbai-desho", "title": "何倍でしょう", "path": "3nen/3nen_nanbai_desho.html"}]},
-      {"name": "計算のじゅんじょ", "apps": [{"id": "3n-keisan-junjo", "title": "計算のじゅんじょ", "path": "3nen/3nen_keisan_junjo.html"}]},
-      {"name": "1けたをかけるかけ算の筆算", "apps": [{"id": "3n-kakezan-hissan1", "title": "1けたをかけるかけ算の筆算", "path": "3nen/3nen_kakezan_hissan1.html"}]},
-      {"name": "式と計算", "apps": [{"id": "3n-shiki-keisan", "title": "式と計算", "path": "3nen/3nen_shiki_keisan.html"}]},
-      {"name": "分数", "apps": [{"id": "3n-bunsu", "title": "分数", "path": "3nen/3nen_bunsu.html"}]},
-      {"name": "三角形", "apps": [{"id": "3n-sankakkei", "title": "三角形", "path": "3nen/3nen_sankakkei.html"}]},
-      {"name": "小数", "apps": [{"id": "3n-shosu", "title": "小数", "path": "3nen/3nen_shosu.html"}]},
-      {"name": "2けたをかけるかけ算の筆算", "apps": [{"id": "3n-kakezan-hissan2", "title": "2けたをかけるかけ算の筆算", "path": "3nen/3nen_kakezan_hissan2.html"}]},
-      {"name": "□を使った式", "apps": [{"id": "3n-shikaku-shiki", "title": "□を使った式", "path": "3nen/3nen_shikaku_shiki.html"}]},
+      {"name": "1　九九の表とかけ算", "apps": [{"id": "3n-kuku-hyo-kakezan", "title": "九九の表とかけ算", "path": "3nen/3nen_kuku_hyo_kakezan.html"}]},
+      {"name": "2　わり算", "apps": [{"id": "3n-warizan", "title": "わり算", "path": "3nen/3nen_warizan.html"}]},
+      {"name": "3　たし算とひき算の筆算", "apps": [{"id": "3n-hissan-th", "title": "たし算とひき算の筆算", "path": "3nen/3nen_hissan_th.html"}]},
+      {"name": "4　時こくと時間", "apps": [{"id": "3n-jikoku-jikan", "title": "時こくと時間", "path": "3nen/3nen_jikoku_jikan.html"}]},
+      {"name": "5　一万をこえる数", "apps": [{"id": "3n-ichiman-koeru", "title": "一万をこえる数", "path": "3nen/3nen_ichiman_koeru.html"}]},
+      {"name": "6　表とグラフ", "apps": [{"id": "3n-hyo-graph", "title": "表とグラフ", "path": "3nen/3nen_hyo_graph.html"}]},
+      {"name": "7　たし算とひき算", "apps": [{"id": "3n-tashizan-hikizan", "title": "たし算とひき算", "path": "3nen/3nen_tashizan_hikizan.html"}]},
+      {"name": "8　長さ", "apps": [{"id": "3n-nagasa", "title": "長さ", "path": "3nen/3nen_nagasa.html"}]},
+      {"name": "9　あまりのあるわり算", "apps": [{"id": "3n-amari-warizan", "title": "あまりのあるわり算", "path": "3nen/3nen_amari_warizan.html"}]},
+      {"name": "10　重さ", "apps": [{"id": "3n-omosa", "title": "重さ", "path": "3nen/3nen_omosa.html"}]},
+      {"name": "11　円と球", "apps": [{"id": "3n-en-kyu", "title": "円と球", "path": "3nen/3nen_en_kyu.html"}]},
+      {"name": "12　何倍でしょう", "apps": [{"id": "3n-nanbai-desho", "title": "何倍でしょう", "path": "3nen/3nen_nanbai_desho.html"}]},
+      {"name": "13　計算のじゅんじょ", "apps": [{"id": "3n-keisan-junjo", "title": "計算のじゅんじょ", "path": "3nen/3nen_keisan_junjo.html"}]},
+      {"name": "14　1けたをかけるかけ算の筆算", "apps": [{"id": "3n-kakezan-hissan1", "title": "1けたをかけるかけ算の筆算", "path": "3nen/3nen_kakezan_hissan1.html"}]},
+      {"name": "15　式と計算", "apps": [{"id": "3n-shiki-keisan", "title": "式と計算", "path": "3nen/3nen_shiki_keisan.html"}]},
+      {"name": "16　分数", "apps": [{"id": "3n-bunsu", "title": "分数", "path": "3nen/3nen_bunsu.html"}]},
+      {"name": "17　三角形", "apps": [{"id": "3n-sankakkei", "title": "三角形", "path": "3nen/3nen_sankakkei.html"}]},
+      {"name": "18　小数", "apps": [{"id": "3n-shosu", "title": "小数", "path": "3nen/3nen_shosu.html"}]},
+      {"name": "19　2けたをかけるかけ算の筆算", "apps": [{"id": "3n-kakezan-hissan2", "title": "2けたをかけるかけ算の筆算", "path": "3nen/3nen_kakezan_hissan2.html"}]},
+      {"name": "20　□を使った式", "apps": [{"id": "3n-shikaku-shiki", "title": "□を使った式", "path": "3nen/3nen_shikaku_shiki.html"}]},
       {"name": "その他（共通）", "apps": [{"id": "3n-donna-keisan-b", "title": "どんな計算になるのかな", "path": "common/3nen_donna_keisan_b.html"}, {"id": "3n-jiyu-kenkyu", "title": "算数の自由研究", "path": "common/sansu_jiyu_kenkyu_3nen.html"}, {"id": "3n-mikata-kangaekata", "title": "見方・考え方を深めよう", "path": "common/3nen_mikata_kangaekata.html"}, {"id": "3n-soroban", "title": "そろばん", "path": "common/soroban.html"}, {"id": "3n-kaemasuka", "title": "買えますか? かえませんか?", "path": "common/kaemasuka_3nen.html"}, {"id": "3n-sdgs", "title": "わくわく SDGs", "path": "common/sdgs_3nen.html"}, {"id": "3n-mosugu4nen", "title": "もうすぐ4年生", "path": "common/mosugu_4nen.html"}]}
     ]
   },
