--- a/app_data.json
+++ b/app_data.json
@@ -22,19 +22,23 @@
     ]
   },
   {
-    "grade": "2年",
+    "grade": "２年",
     "units": [
-      {"name": "1　ひょうと グラフ", "apps": [{"id": "2n-hyo-graph", "title": "1　ひょうと グラフ", "path": "2nen/2nen_hyo_graph.html"}]},
-      {"name": "2　たし算とひき算", "apps": [{"id": "2n-tashizan-hikizan", "title": "2　たし算とひき算", "path": "2nen/2nen_tashizan_hikizan.html"}]},
-      {"name": "3　時こくと時間", "apps": [{"id": "2n-jikoku-jikan", "title": "3　時こくと時間", "path": "2nen/2nen_jikoku_jikan.html"}]},
-      {"name": "4　長さ", "apps": [{"id": "2n-nagasa", "title": "4　長さ", "path": "2nen/2nen_nagasa.html"}]},
-      {"name": "5　たし算とひき算の筆算(1)", "apps": [{"id": "2n-hissan-th1", "title": "5　たし算とひき算の筆算(1)", "path": "2nen/2nen_hissan_th1.html"}]},
-      {"name": "6　100をこえる数", "apps": [{"id": "2n-100-koeru", "title": "6　100をこえる数", "path": "2nen/2nen_100_koeru.html"}]},
-      {"name": "7　かさ", "apps": [{"id": "2n-kasa", "title": "7　かさ", "path": "2nen/2nen_kasa.html"}]},
-      {"name": "8　たし算とひき算の筆算(2)", "apps": [{"id": "2n-hissan-th2", "title": "8　たし算とひき算の筆算(2)", "path": "2nen/2nen_hissan_th2.html"}]},
-      {"name": "9　しきと計算", "apps": [{"id": "2n-sikito-keisan", "title": "9　しきと計算", "path": "2nen/2nen_sankaku_shikaku.html"}]},            
+      {"name": "１　ひょうと グラフ", "apps": [{"id": "2n-hyo-graph", "title": "1　ひょうと グラフ", "path": "2nen/2nen_hyo_graph.html"}]},
+      {"name": "２　たし算とひき算", "apps": [{"id": "2n-tashizan-hikizan", "title": "2　たし算とひき算", "path": "2nen/2nen_tashizan_hikizan.html"}]},
+      {"name": "３　時こくと時間", "apps": [{"id": "2n-jikoku-jikan", "title": "3　時こくと時間", "path": "2nen/2nen_jikoku_jikan.html"}]},
+      {"name": "４　長さ", "apps": [{"id": "2n-nagasa", "title": "4　長さ", "path": "2nen/2nen_nagasa.html"}]},
+      {"name": "５　たし算とひき算の筆算⑴", "apps": [{"id": "2n-hissan-th1", "title": "5　たし算とひき算の筆算(1)", "path": "2nen/2nen_hissan_th1.html"}]},
+      {"name": "・　見方・考え方をふかめよう⑴", "apps": [{"id": "2n-mikata-kangaekata1", "title": "・　見方・考え方をふかめよう⑴", "path": "2nen/"}]},
+      {"name": "６　100をこえる数", "apps": [{"id": "2n-100-koeru", "title": "6　100をこえる数", "path": "2nen/2nen_100_koeru.html"}]},
+      {"name": "７　かさ", "apps": [{"id": "2n-kasa", "title": "7　かさ", "path": "2nen/2nen_kasa.html"}]},
+      {"name": "・　買えますか？買えませんか？", "apps": [{"id": "2n-kaemasuka-kaemasenka", "title": "・　買えますか？買えませんか？", "path": "2nen/"}]},
+      {"name": "・　算数のじゆうけんきゅう", "apps": [{"id": "2n-sansu-jiyukenkyu", "title": "・　算数のじゆうけんきゅう", "path": "2nen/"}]},
+      {"name": "８　たし算とひき算の筆算⑵", "apps": [{"id": "2n-hissan-th2", "title": "8　たし算とひき算の筆算(2)", "path": "2nen/2nen_hissan_th2.html"}]},
+      {"name": "・　見方・考え方をふかめよう⑵", "apps": [{"id": "2n-mikata-kangaekata1", "title": "・　見方・考え方をふかめよう⑵", "path": "2nen/"}]},
+      {"name": "９　しきと計算", "apps": [{"id": "2n-sikito-keisan", "title": "9　しきと計算", "path": "2nen/2nen_sankaku_shikaku.html"}]},            
       {
-        "name": "10　かけ算(1)",
+        "name": "１０　かけ算⑴",
         "apps": [
           {"id": "kuku-5dan-junban", "title": "五の段の九九（じゅんばん）", "path": "2nen/10-11_kakezan/05kuku_5dan_junban.html"},
           {"id": "kuku-5dan-barabara", "title": "五の段の九九（ばらばら）", "path": "2nen/10-11_kakezan/15kuku_5dan_barabara.html"},
@@ -48,7 +52,7 @@
         ]
       },
       {
-        "name": "10　かけ算(2)",
+        "name": "１１　かけ算⑵",
         "apps": [
           {"id": "kuku-6dan-junban", "title": "六の段の九九（じゅんばん）", "path": "2nen/10-11_kakezan/06kuku_6dan_junban.html"},
           {"id": "kuku-6dan-barabara", "title": "六の段の九九（ばらばら）", "path": "2nen/10-11_kakezan/16kuku_6dan_barabara.html"},
@@ -66,35 +70,44 @@
         ]
       },
 
-      {"name": "分数", "apps": [{"id": "2n-bunsuu", "title": "分数", "path": "2nen/2nen_bunsuu.html"}]},
-
-      {"name": "三角形と四角形", "apps": [{"id": "2n-sankaku-shikaku", "title": "三角形と四角形", "path": "2nen/2nen_sankaku_shikaku.html"}]},
-      {"name": "その他（共通）", "apps": [{"id": "2n-hyaku-man", "title": "100と1000", "path": "common/2nen_hyaku_man.html"}, {"id": "2n-tsukatte-hyogen", "title": "つかって表そう", "path": "common/2nen_tsukatte_hyogen.html"}, {"id": "2n-mosugu3nen", "title": "もうすぐ3年生", "path": "common/mosugu_3nen.html"}]}
+      {"name": "12　三角形と 四角形", "apps": [{"id": "2n-sankaku-shikaku", "title": "12　三角形と 四角形", "path": "2nen/2nen_sankaku_shikaku.html"}]},
+      {"name": "・　見方・考え方をふかめよう⑶", "apps": [{"id": "2n-mikata-kangaekata3", "title": "・　見方・考え方をふかめよう⑶", "path": "2nen/"}]},
+      {"name": "・　どんな 計算に なるのかな", "apps": [{"id": "2n-donna-keisan", "title": "・　どんな 計算に なるのかな", "path": "2nen/"}]},
+      {"name": "・　何番目", "apps": [{"id": "2n-nanbanme", "title": "・　何番目", "path": "2nen/"}]},
+      {"name": "13　かけ算の きまり", "apps": [{"id": "2n-kakezan-kimari", "title": "13　かけ算の きまり", "path": "2nen/2nen_kakezan_kimari.html"}]},
+      {"name": "14　100cmを こえる 長さ", "apps": [{"id": "2n-100cm-koeru-nagasa", "title": "14　100cmを こえる 長さ", "path": "2nen/2nen_100cm_koeru_nagasa.html"}]},
+      {"name": "15　1000をこえる数", "apps": [{"id": "2n-1000-koeru", "title": "15　1000をこえる数", "path": "2nen/2nen_1000_koeru.html"}]},
+      {"name": "16　はこの 形", "apps": [{"id": "2n-hako-no-katachi", "title": "16　はこの 形", "path": "2nen/2nen_hako_no_katachi.html"}]},
+      {"name": "17　分数", "apps": [{"id": "2n-bunsu", "title": "17　分数", "path": "2nen/2nen_bunsu.html"}]},
+      {"name": "・　わくわく プログラミング", "apps": [{"id": "2n-programming", "title": "・　わくわく プログラミング", "path": "2nen/"}]},
+      {"name": "・　よみとる 算数", "apps": [{"id": "2n-yomitoru-sansu", "title": "・　よみとる 算数", "path": "2nen/"}]},
+      {"name": "・　もうすぐ 3年生", "apps": [{"id": "2n-mousugu3nen", "title": "・　もうすぐ 3年生", "path": "2nen/"}]}
     ]
   },
   {
     "grade": "3年",
     "units": [
-      {"name": "1　九九の表とかけ算", "apps": [{"id": "3n-kuku-hyo-kakezan", "title": "九九の表とかけ算", "path": "3nen/3nen_kuku_hyo_kakezan.html"}]},
-      {"name": "2　わり算", "apps": [{"id": "3n-warizan", "title": "わり算", "path": "3nen/3nen_warizan.html"}]},
-      {"name": "3　たし算とひき算の筆算", "apps": [{"id": "3n-hissan-th", "title": "たし算とひき算の筆算", "path": "3nen/3nen_hissan_th.html"}]},
-      {"name": "4　時こくと時間", "apps": [{"id": "3n-jikoku-jikan", "title": "時こくと時間", "path": "3nen/3nen_jikoku_jikan.html"}]},
-      {"name": "5　一万をこえる数", "apps": [{"id": "3n-ichiman-koeru", "title": "一万をこえる数", "path": "3nen/3nen_ichiman_koeru.html"}]},
-      {"name": "6　表とグラフ", "apps": [{"id": "3n-hyo-graph", "title": "表とグラフ", "path": "3nen/3nen_hyo_graph.html"}]},
-      {"name": "7　たし算とひき算", "apps": [{"id": "3n-tashizan-hikizan", "title": "たし算とひき算", "path": "3nen/3nen_tashizan_hikizan.html"}]},
-      {"name": "8　長さ", "apps": [{"id": "3n-nagasa", "title": "長さ", "path": "3nen/3nen_nagasa.html"}]},
-      {"name": "9　あまりのあるわり算", "apps": [{"id": "3n-amari-warizan", "title": "あまりのあるわり算", "path": "3nen/3nen_amari_warizan.html"}]},
-      {"name": "10　重さ", "apps": [{"id": "3n-omosa", "title": "重さ", "path": "3nen/3nen_omosa.html"}]},
-      {"name": "11　円と球", "apps": [{"id": "3n-en-kyu", "title": "円と球", "path": "3nen/3nen_en_kyu.html"}]},
-      {"name": "12　何倍でしょう", "apps": [{"id": "3n-nanbai-desho", "title": "何倍でしょう", "path": "3nen/3nen_nanbai_desho.html"}]},
-      {"name": "13　計算のじゅんじょ", "apps": [{"id": "3n-keisan-junjo", "title": "計算のじゅんじょ", "path": "3nen/3nen_keisan_junjo.html"}]},
-      {"name": "14　1けたをかけるかけ算の筆算", "apps": [{"id": "3n-kakezan-hissan1", "title": "1けたをかけるかけ算の筆算", "path": "3nen/3nen_kakezan_hissan1.html"}]},
-      {"name": "15　式と計算", "apps": [{"id": "3n-shiki-keisan", "title": "式と計算", "path": "3nen/3nen_shiki_keisan.html"}]},
-      {"name": "16　分数", "apps": [{"id": "3n-bunsu", "title": "分数", "path": "3nen/3nen_bunsu.html"}]},
-      {"name": "17　三角形", "apps": [{"id": "3n-sankakkei", "title": "三角形", "path": "3nen/3nen_sankakkei.html"}]},
-      {"name": "18　小数", "apps": [{"id": "3n-shosu", "title": "小数", "path": "3nen/3nen_shosu.html"}]},
-      {"name": "19　2けたをかけるかけ算の筆算", "apps": [{"id": "3n-kakezan-hissan2", "title": "2けたをかけるかけ算の筆算", "path": "3nen/3nen_kakezan_hissan2.html"}]},
-      {"name": "20　□を使った式", "apps": [{"id": "3n-shikaku-shiki", "title": "□を使った式", "path": "3nen/3nen_shikaku_shiki.html"}]},
+      {"name": "１　九九の表とかけ算", "apps": [{"id": "3n-kuku-hyo-kakezan", "title": "九九の表とかけ算", "path": "3nen/3nen_kuku_hyo_kakezan.html"}]},
+      {"name": "２　わり算", "apps": [{"id": "3n-warizan", "title": "わり算", "path": "3nen/3nen_warizan.html"}]},
+      {"name": "・　たし算とひき算の筆算", "apps": [{"id": "3n-hissan-th", "title": "たし算とひき算の筆算", "path": "3nen/3nen_hissan_th.html"}]},
+      {"name": "３　たし算とひき算の筆算", "apps": [{"id": "3n-hissan-th", "title": "たし算とひき算の筆算", "path": "3nen/3nen_hissan_th.html"}]},
+      {"name": "４　時こくと時間", "apps": [{"id": "3n-jikoku-jikan", "title": "時こくと時間", "path": "3nen/3nen_jikoku_jikan.html"}]},
+      {"name": "５　一万をこえる数", "apps": [{"id": "3n-ichiman-koeru", "title": "一万をこえる数", "path": "3nen/3nen_ichiman_koeru.html"}]},
+      {"name": "６　表とグラフ", "apps": [{"id": "3n-hyo-graph", "title": "表とグラフ", "path": "3nen/3nen_hyo_graph.html"}]},
+      {"name": "７　たし算とひき算", "apps": [{"id": "3n-tashizan-hikizan", "title": "たし算とひき算", "path": "3nen/3nen_tashizan_hikizan.html"}]},
+      {"name": "８　長さ", "apps": [{"id": "3n-nagasa", "title": "長さ", "path": "3nen/3nen_nagasa.html"}]},
+      {"name": "９　あまりのあるわり算", "apps": [{"id": "3n-amari-warizan", "title": "あまりのあるわり算", "path": "3nen/3nen_amari_warizan.html"}]},
+      {"name": "１０　重さ", "apps": [{"id": "3n-omosa", "title": "重さ", "path": "3nen/3nen_omosa.html"}]},
+      {"name": "１１　円と球", "apps": [{"id": "3n-en-kyu", "title": "円と球", "path": "3nen/3nen_en_kyu.html"}]},
+      {"name": "１２　何倍でしょう", "apps": [{"id": "3n-nanbai-desho", "title": "何倍でしょう", "path": "3nen/3nen_nanbai_desho.html"}]},
+      {"name": "１３　計算のじゅんじょ", "apps": [{"id": "3n-keisan-junjo", "title": "計算のじゅんじょ", "path": "3nen/3nen_keisan_junjo.html"}]},
+      {"name": "１４　1けたをかけるかけ算の筆算", "apps": [{"id": "3n-kakezan-hissan1", "title": "1けたをかけるかけ算の筆算", "path": "3nen/3nen_kakezan_hissan1.html"}]},
+      {"name": "１５　式と計算", "apps": [{"id": "3n-shiki-keisan", "title": "式と計算", "path": "3nen/3nen_shiki_keisan.html"}]},
+      {"name": "１６　分数", "apps": [{"id": "3n-bunsu", "title": "分数", "path": "3nen/3nen_bunsu.html"}]},
+      {"name": "１７　三角形", "apps": [{"id": "3n-sankakkei", "title": "三角形", "path": "3nen/3nen_sankakkei.html"}]},
+      {"name": "１８　小数", "apps": [{"id": "3n-shosu", "title": "小数", "path": "3nen/3nen_shosu.html"}]},
+      {"name": "１９　2けたをかけるかけ算の筆算", "apps": [{"id": "3n-kakezan-hissan2", "title": "2けたをかけるかけ算の筆算", "path": "3nen/3nen_kakezan_hissan2.html"}]},
+      {"name": "２０　□を使った式", "apps": [{"id": "3n-shikaku-shiki", "title": "□を使った式", "path": "3nen/3nen_shikaku_shiki.html"}]},
       {"name": "その他（共通）", "apps": [{"id": "3n-donna-keisan-b", "title": "どんな計算になるのかな", "path": "common/3nen_donna_keisan_b.html"}, {"id": "3n-jiyu-kenkyu", "title": "算数の自由研究", "path": "common/sansu_jiyu_kenkyu_3nen.html"}, {"id": "3n-mikata-kangaekata", "title": "見方・考え方を深めよう", "path": "common/3nen_mikata_kangaekata.html"}, {"id": "3n-soroban", "title": "そろばん", "path": "common/soroban.html"}, {"id": "3n-kaemasuka", "title": "買えますか? かえませんか?", "path": "common/kaemasuka_3nen.html"}, {"id": "3n-sdgs", "title": "わくわく SDGs", "path": "common/sdgs_3nen.html"}, {"id": "3n-mosugu4nen", "title": "もうすぐ4年生", "path": "common/mosugu_4nen.html"}]}
     ]
   },
