--- a/app_data.backup.20250818_025859.json
+++ b/app_data.backup.20250818_025859.json
@@ -699,6 +699,11 @@
             "id": "03_shikaku_kakezan",
             "title": "□のかけ算",
             "path": "3nen/1_kuku_hyo_kakezan/03_shikaku_kakezan.html"
+          },
+          {
+            "id": "template",
+            "title": "わくわく算数ドリル",
+            "path": "3nen/1_kuku_hyo_kakezan/template.html"
           }
         ]
       },
