--- a/app_data.backup.20250818_025858.json
+++ b/app_data.backup.20250818_025858.json
@@ -442,48 +442,53 @@
         "apps": [
           {
             "id": "10kuku_5dan_junban",
-            "title": "五の段の九九（じゅんばん）",
+            "title": "１０ かけ算⑴",
             "path": "2nen/10_kakezan1/10kuku_5dan_junban.html"
           },
           {
             "id": "20kuku_5dan_barabara",
-            "title": "五の段の九九（ばらばら）",
+            "title": "かけ算⑴",
             "path": "2nen/10_kakezan1/20kuku_5dan_barabara.html"
           },
           {
             "id": "30kuku_2dan_junban",
-            "title": "二の段の九九（じゅんばん）",
+            "title": "わくわく算数ドリル",
             "path": "2nen/10_kakezan1/30kuku_2dan_junban.html"
           },
           {
             "id": "40kuku_2dan_barabara",
-            "title": "二の段の九九（ばらばら）",
+            "title": "わくわく算数ドリル",
             "path": "2nen/10_kakezan1/40kuku_2dan_barabara.html"
           },
           {
             "id": "50kuku_3dan_junban",
-            "title": "三の段の九九（じゅんばん）",
+            "title": "わくわく算数ドリル",
             "path": "2nen/10_kakezan1/50kuku_3dan_junban.html"
           },
           {
             "id": "60kuku_3dan_barabara",
-            "title": "三の段の九九（ばらばら）",
+            "title": "わくわく算数ドリル",
             "path": "2nen/10_kakezan1/60kuku_3dan_barabara.html"
           },
           {
             "id": "70kuku_4dan_junban",
-            "title": "四の段の九九（じゅんばん）",
+            "title": "わくわく算数ドリル",
             "path": "2nen/10_kakezan1/70kuku_4dan_junban.html"
           },
           {
             "id": "80kuku_4dan_barabara",
-            "title": "四の段の九九（ばらばら）",
+            "title": "わくわく算数ドリル",
             "path": "2nen/10_kakezan1/80kuku_4dan_barabara.html"
           },
           {
             "id": "90kuku_5234dan_random",
-            "title": "二、三、四、五の段の九九",
+            "title": "わくわく算数ドリル",
             "path": "2nen/10_kakezan1/90kuku_5234dan_random.html"
+          },
+          {
+            "id": "template",
+            "title": "１０ かけ算⑴",
+            "path": "2nen/10_kakezan1/template.html"
           }
         ]
       },
@@ -492,68 +497,73 @@
         "apps": [
           {
             "id": "10kuku_6dan_junban",
-            "title": "六の段の九九（じゅんばん）",
+            "title": "わくわく算数ドリル",
             "path": "2nen/11_kakezan2/10kuku_6dan_junban.html"
           },
           {
             "id": "20kuku_6dan_barabara",
-            "title": "六の段の九九（ばらばら）",
+            "title": "わくわく算数ドリル",
             "path": "2nen/11_kakezan2/20kuku_6dan_barabara.html"
           },
           {
             "id": "30kuku_7dan_junban",
-            "title": "七の段の九九（じゅんばん）",
+            "title": "わくわく算数ドリル",
             "path": "2nen/11_kakezan2/30kuku_7dan_junban.html"
           },
           {
             "id": "40kuku_7dan_barabara",
-            "title": "七の段の九九（ばらばら）",
+            "title": "わくわく算数ドリル",
             "path": "2nen/11_kakezan2/40kuku_7dan_barabara.html"
           },
           {
             "id": "50kuku_8dan_junban",
-            "title": "八の段の九九（じゅんばん）",
+            "title": "わくわく算数ドリル",
             "path": "2nen/11_kakezan2/50kuku_8dan_junban.html"
           },
           {
             "id": "60kuku_8dan_barabara",
-            "title": "八の段の九九（ばらばら）",
+            "title": "わくわく算数ドリル",
             "path": "2nen/11_kakezan2/60kuku_8dan_barabara.html"
           },
           {
             "id": "70kuku_9dan_junban",
-            "title": "九の段の九九（じゅんばん）",
+            "title": "わくわく算数ドリル",
             "path": "2nen/11_kakezan2/70kuku_9dan_junban.html"
           },
           {
             "id": "80kuku_9dan_barabara",
-            "title": "九の段の九九（ばらばら）",
+            "title": "わくわく算数ドリル",
             "path": "2nen/11_kakezan2/80kuku_9dan_barabara.html"
           },
           {
             "id": "90kuku_1dan_junban",
-            "title": "一の段の九九（じゅんばん）",
+            "title": "わくわく算数ドリル",
             "path": "2nen/11_kakezan2/90kuku_1dan_junban.html"
           },
           {
             "id": "100kuku_1dan_barabara",
-            "title": "一の段の九九（ばらばら）",
+            "title": "わくわく算数ドリル",
             "path": "2nen/11_kakezan2/100kuku_1dan_barabara.html"
           },
           {
             "id": "110kuku_16789dan_random",
-            "title": "一、六、七、八、九段の九九",
+            "title": "わくわく算数ドリル",
             "path": "2nen/11_kakezan2/110kuku_16789dan_random.html"
           },
           {
             "id": "120kuku_10mondai",
-            "title": "九九",
+            "title": "わくわく算数ドリル",
             "path": "2nen/11_kakezan2/120kuku_10mondai.html"
           },
           {
             "id": "130kuku_81mondai",
-            "title": "九九（81問）",
+            "title": "わくわく算数ドリル",
             "path": "2nen/11_kakezan2/130kuku_81mondai.html"
+          },
+          {
+            "id": "template",
+            "title": "わくわく算数ドリル",
+            "path": "2nen/11_kakezan2/template.html"
           }
         ]
       },
@@ -699,6 +709,11 @@
             "id": "03_shikaku_kakezan",
             "title": "□のかけ算",
             "path": "3nen/1_kuku_hyo_kakezan/03_shikaku_kakezan.html"
+          },
+          {
+            "id": "template",
+            "title": "わくわく算数ドリル",
+            "path": "3nen/1_kuku_hyo_kakezan/template.html"
           }
         ]
       },
